cot-macros/tests/ui/func_query_double_field.stderr
error: expected an operator or a method call
  --> tests/ui/func_query_double_field.rs:16:16
   |
16 |         $name $name
   |                ^^^^
